# penlog

./: .build.yml  .buildinfo  .circleci  .gitignore  .mailmap  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  formatter.go  genindex.html  go.mod  go.sum  hr.1.html  index.html  log.go  objects.inv  penlog.7.html  pyproject.toml  search.html  searchindex.js  setup.cfg
.builds/: arch.yml
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: commits.yml  docs.yml  linters.yml  penlog.yml  pytest.yml
_sources/: hr.1.rst.txt
contrib/: listexit.sh
docs/: conf.py  index.rst
man/: .gitignore  Makefile  footer.adoc  footer.md  hr.1.adoc  pendump.1.adoc  pendump.1.md  penlog-best-practice.7.md  penlog.7.adoc  penlog.7.md  penrun.1.adoc  penrun.1.md
penlog/: __init__.py
pypenlog/: pyproject.toml
pypenlog/.github/workflows/: linters.yml
python/: penlog.py  setup.py
test/cli/: 0001-hr-check.bats  0002-hr-check-filter.bats  Makefile  lib-helpers.bash
test/cli/hr/: example-colors.log.json
tests/cli/: 0001-hr-check.bats  0002-hr-check-filter.bats  0003-hr-signal.bats  0004-hr-and-jq.bats  0005-penrun.bats  Makefile  example.log.json  lib-helpers.bash
tests/cli/hr/: example-with-error.log.json
