[tool.poetry]
name = "pypenlog"
version = "0.2.7"
description = "Library implementing AISEC's penlog specification"
authors = ["Stefan Tatschner <stefan.tatschner@aisec.fraunhofer.de>"]
license = "Apache-2.0"
repository = "https://github.com/Fraunhofer-AISEC/pypenlog"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging",
    "Typing :: Typed",
]
packages = [
    { include = "penlog" }
]
include=["penlog/py.typed"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
mccabe = "^0.6.1"
rope = "^0.22.0"
mypy = "^0.910"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
