[tool.poetry]
name = "penlog"
version = "0.1.0"
description = "Specification, library, and tooling for simple machine readable logging "
authors = ["Stefan Tatschner <stefan.tatschner@aisec.fraunhofer.de>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
Sphinx = "^4.5.0"
myst-parser = "^0.17.0"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
