[metadata]
name = pypenlog
version = 0.2.0
author = Stefan Tatschner
author_email = stefan.tatschner@aisec.fraunhofer.de
description = Library implementing AISECs penlog specification
classifiers =
    Programming Language :: Python :: 3
    Operating System :: POSIX :: Linux

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6

[options.package_data]
* = *.typed
